# address_mapper

./: .gitignore  .gitmodules  Readme.md  ocaml_map.opam
address_mapper/: .dockerignore  .ocamlformat  Dockerfile  Readme.md  address_mapper.opam  address_mapper_linux_opam  dune-project  example_clients.csv  example_clients_with_census_tract.csv  example_config.json  example_config_schools.json
address_mapper/data/tl_2022_40143_addrfeat/: tl_2022_40143_addrfeat.shp.iso.xml
address_mapper/data/tl_2022_addrfeat/: Readme.md  tl_2022_addrfeat.shx
address_mapper/data/tps_elementary_school_2022c/: tps_elementary_school_2022c.shp
address_mapper/src/: dune  link_flags_linux.dune  main.ml  test.ml
address_mapper/src/lib/: address_features.ml  aux.ml  census_tract.ml  dune  geometry.ml
address_mapper/src/lib/postal/: linux.dune  macosx.dune  postal.cpp  postal.ml
journal/: 2024-01-04.md  census tract lookup.md  qgis notes.md
journal/.obsidian/: graph.json  workspace.json
ocaml_maps/: clients_with_census_tract.csv  dune  dune-project  example_clients_with_census_tract.csv  get_census_tract.opam
ocaml_maps/data/: Readme.md  tl_2022_40_tract_simpl.shp
ocaml_maps/data/tl_2022_40143_addrfeat/: tl_2022_40143_addrfeat.shx
ocaml_maps/src/: dune  link_flags_macosx.dune
ocaml_maps/src/lib/: asemio_dbf.ml  census_tract.ml  dune  geometry.ml  shape.ml
ocaml_maps/src/lib/postal/: macosx.dune  postal.mli
svg_map/: Readme.md  dune-project  example_config.json  svg_map.opam
svg_map/configs/: census_tract_config.json  census_tract_tulsa_config.json  tps_elementary_school_config.json  tulsa_area_school_districts.json  tulsa_zip_codes_config.json
svg_map/data/census_tract_boundaries_tulsa_2022/: Readme.md  census_tract_boundaries_tulsa_2022.dbf  census_tract_boundaries_tulsa_2022.shp  census_tract_boundaries_tulsa_2022.shx
svg_map/data/oklahoma_school_districts/: tl_2022_40_unsd.dbf  tl_2022_40_unsd.shp.iso.xml  tl_2022_40_unsd.shx
svg_map/data/tps_elementary_school_2022_simpl/: tps_elementary_school_2022_simpl.dbf  tps_elementary_school_2022_simpl.shp  tps_elementary_school_2022_simpl.shx
svg_map/data/tps_elementary_school_2022c/: tps_elementary_school_2022c.dbf  tps_elementary_school_2022c.shx
svg_map/data/tulsa_area_clip_layer/: tulsa_clip_layer.shp  tulsa_clip_layer.shx
svg_map/data/tulsa_area_school_districts/: tulsa_area_school_districts.dbf  tulsa_area_school_districts.qmd  tulsa_area_school_districts.shp  tulsa_area_school_districts.shx
svg_map/data/tulsa_area_zip_codes_2022/: tulsa_area_zip_codes_2022.dbf  tulsa_area_zip_codes_2022.shp  tulsa_area_zip_codes_2022.shx
svg_map/src/: main.ml
svg_map/src/lib/: census_tract.ml  dune
