opam-version: "2.0"
maintainer: "Asemio"
authors: [
  "Asemio"
]
synopsis: "Spotlight AIC"
description: """
The project repo for a Spotlight Actionable Insight Cycle
"""
license: "NONE"
tags: []
homepage: ""
doc: ""
bug-reports: ""
pin-depends: [
 ["cluster.1.0.0" "git+https://github.com/llee454/cluster.git#main"]
 ["ppx_profile.1.0.0" "git+https://github.com/llee454/ppx_profile.git#main"]
 ["asemio_stats.1.0.11" "git+https://github.com/llee454/ocaml-gsl-demo.git#main"]
]
depends: [
  "ocaml"
  "ocaml-option-flambda"
  "dune"
  "ocaml-lsp-server"
#   "ocamlformat"
  "ppx_jane"
  "core"
  "core_unix"
  "lwt"
  "lwt_ppx"
  "csv-lwt"
  "conf-libev"

  "uuidm"
  "re" { >= "1.9.0" & < "2.0.0" }
  "yojson" { >= "1.7.0" & < "2.0.0" }
  "ppx_deriving_yojson" { >= "3.5.2" }

  "alcotest"
  "alcotest-lwt"
  "ppx_profile" { = "1.0.0" }
  "shapefile"
  "dbf"
  "asemio_stats" { = "1.0.11" }
]